plugins {
	id "architectury-plugin" version "3.4-SNAPSHOT"
	id "dev.architectury.loom" version "1.1-SNAPSHOT" apply false
	id "io.github.juuxel.loom-vineflower" version "1.+" apply false
	id "io.github.pacifistmc.forgix" version "1.2.6"
	id "io.github.p03w.machete" version "1.1.4" apply false // automatic jar compressing on build
}

architectury {
	minecraft = rootProject.minecraft_version
}

architectury {
	minecraft = rootProject.minecraft_version
}

subprojects {
	apply plugin: "dev.architectury.loom"
	apply plugin: "io.github.juuxel.loom-vineflower"

	loom {
		silentMojangMappingsLicense()
	}

	repositories {
		maven { url 'https://maven.terraformersmc.com/releases/' }
		maven { url 'https://api.modrinth.com/maven' }
		maven { url 'https://maven.quiltmc.org/repository/release/' }
	}

	dependencies {
		minecraft "com.mojang:minecraft:${rootProject.minecraft_version}"
		// The following line declares the mojmap mappings, you may use other mappings as well
		mappings loom.layered {
			mappings("org.quiltmc:quilt-mappings:$minecraft_version+build.$mappings:intermediary-v2")
			officialMojangMappings()
		}

		// Mods
		modCompileOnly "maven.modrinth:iris:$iris"
	}
}

allprojects {
	apply plugin: "java"
	apply plugin: "architectury-plugin"
	apply plugin: "maven-publish"

	java_version = rootProject.java_version
	archivesBaseName = rootProject.archives_base_name
	version = rootProject.mod_version + "+" + rootProject.minecraft_version
	group = rootProject.maven_group

	repositories {
		// Add repositories to retrieve artifacts from in here.
		// You should only use this when depending on other mods because
		// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
		// See https://docs.gradle.org/current/userguide/declaring_repositories.html
		// for more information about repositories.
	}

	tasks.withType(JavaCompile) {
		options.encoding = "UTF-8"
		options.release = Integer.valueOf(java_version)
	}

	java {
		sourceCompatibility = JavaVersion.VERSION_17
		targetCompatibility = JavaVersion.VERSION_17
		withSourcesJar()
	}
}

forgix {
	apply plugin: "io.github.p03w.machete"

	group = rootProject.maven_group
	mergedJarName = rootProject.archives_base_name + "-" +  rootProject.mod_version + "+" + rootProject.minecraft_version + ".jar"
	forge {
		projectName = "forge"
		jarLocation = ("build/libs/" + rootProject.archives_base_name + "-" + rootProject.mod_version + "+" + rootProject.minecraft_version + "-forge-mc.jar")
	}

	fabric {
		projectName = "fabric" // This is the name of the fabric project. If this property is not defined then by default it'll set to "fabric" since that's the name the Architectury Template uses.
		jarLocation = ("build/libs/" + rootProject.archives_base_name + "-" + rootProject.mod_version + "+" + rootProject.minecraft_version + "-fabric-mc.jar")
	}
}
